--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
   padding: 20px;
   color: white;
 }
@@ -22,7 +21,20 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.video-container {
+  display: flex;
+}
+
+.video-container > div {
+  display: flex;
+  width: 50%;
+}
+
+.video-container > div video {
+  width: 100%;
+}
+
+.remote-container {
+  display: flex;
+  flex-direction: column;
 }
